--- a/12_distributed_tensorflow.ipynb
+++ b/12_distributed_tensorflow.ipynb
@@ -160,7 +160,17 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/diego/anaconda3/envs/tensorflow-test/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "reset_graph()\n",
     "\n",
@@ -183,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0\n"
+      "0.0\n"
      ]
     }
    ],
@@ -862,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "nav_menu": {},
   "toc": {
